--- a/src/cinnamon/scss/sections/_panel_new.scss
+++ b/src/cinnamon/scss/sections/_panel_new.scss
@@ -239,8 +239,12 @@
     transition-duration: 150;
     border-radius: $roundness;
     padding: 0 $spacing;
+    text-align: center;
     &.vertical {
         padding: $spacing 0;
+        .applet-label {
+            padding: 0;
+        }
     }
     &:checked {
         color: $selected_bg_color;
@@ -261,7 +265,7 @@
 .applet-label {
     font-weight: bold;
     color: $cinn_fg_color;
-    padding-left: 3px;
+    padding-left: 2px;
 }
 // icon-size set to 22 to match hard-coded menu icon size - applet-icon style is used for search provider results in menu
 .applet-icon {
@@ -390,6 +394,7 @@
         font-size: 0.9em;
         background-color: rgba(0, 0, 0, 0.01);
         border-radius: $roundness;
+        text-align: left;
         &:hover {
             background-color: $alt_hover_background;
             color: $selected_bg_color;
